<resources>
    <string name="app_name">ActivityLifecycleCounter</string>
    <string name="defaultValue">0</string>
    <string name="onRestart">onRestart:</string>
    <string name="onStart">onStart:</string>
    <string name="onPause">onPause:</string>
    <string name="onSaveInstanceState">onSaveInstanceState:</string>
    <string name="onRestoreInstanceState">onRestoreInstanceState:</string>
    <string name="Reset">Reset</string>
    <string name="onStop">onStop:</string>
    <string name="onDestroy">onDestroy:</string>
    <string name="onResume">onResume:</string>
    <string name="onCreate">onCreate:</string>
</resources>
