<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:id="@+id/container"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".MainActivity">
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TableRow
                android:id="@+id/onCreateRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip" >
            <TextView
                    android:id="@+id/onCreate"
                    android:text="@string/onCreate"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            <TextView
                    android:id="@+id/onCreateCount"
                    android:text="@string/defaultValue"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
                android:id="@+id/onRestartRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip" >
            <TextView
                    android:id="@+id/onRestart"
                    android:text="@string/onRestart"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            <TextView
                    android:id="@+id/onRestartCount"
                    android:text="@string/defaultValue"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
                android:id="@+id/onStartRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip" >
            <TextView
                    android:id="@+id/onStart"
                    android:text="@string/onStart"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            <TextView
                    android:id="@+id/onStartCount"
                    android:text="@string/defaultValue"
                    android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow
                android:id="@+id/onPauseRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip" >
            <TextView
                    android:id="@+id/onPause"
                    android:text="@string/onPause"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            <TextView
                    android:id="@+id/onPauseCount"
                    android:text="@string/defaultValue"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
                android:id="@+id/onSaveInstanceStateRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip" >
            <TextView
                    android:id="@+id/OnSaveInstanceState"
                    android:text="@string/onSaveInstanceState"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            <TextView
                    android:id="@+id/onSaveInstanceStateCount"
                    android:text="@string/defaultValue"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
                android:id="@+id/onRestoreInstanceStateRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip" >
            <TextView
                    android:id="@+id/onRestoreInstanceState"
                    android:text="@string/onRestoreInstanceState"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            <TextView
                    android:id="@+id/onRestoreInstanceStateCount"
                    android:text="@string/defaultValue"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
                android:id="@+id/onStopRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip" >
            <TextView
                    android:id="@+id/onStop"
                    android:text="@string/onStop"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            <TextView
                    android:id="@+id/onStopCount"
                    android:text="@string/defaultValue"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
                android:id="@+id/onDestroyRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip" >
            <TextView
                    android:id="@+id/onDestroy"
                    android:text="@string/onDestroy"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            <TextView
                    android:id="@+id/onDestroyCount"
                    android:text="@string/defaultValue"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
                android:id="@+id/onResumeRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip" >
            <TextView
                    android:id="@+id/onResume"
                    android:text="@string/onResume"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            <TextView
                    android:id="@+id/onResumeCount"
                    android:text="@string/defaultValue"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
                android:id="@+id/ResetRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip" >
            <Button
                    android:id="@+id/Reset"
                    android:text="@string/Reset" />
        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>